--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#888888</color>
+    <color name="primary">#000000</color>
+    <color name="secondary">#9C9C9C</color>
+    <color name="third">#393939</color>
 </resources>
