--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/logo"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_marginTop="84dp"
             android:contentDescription="@string/logo"
             android:src="@drawable/logo"
@@ -27,7 +27,7 @@
             android:id="@+id/txtDesc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:gravity="center"
             android:text="@string/learn_more"
             android:textAlignment="center"
@@ -42,7 +42,7 @@
             android:id="@+id/etUsername"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="54dp"
             android:autofillHints="username"
             android:background="@drawable/rounded_edit_text"
             android:hint="@string/username"
