--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -41,7 +41,7 @@
                         android:contentDescription="Home"
                         android:focusable="true"
                         android:onClick="onClick"
-                        android:src="@drawable/logos"
+                        android:src="@drawable/logo"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
