--- a/app/src/main/res/layout/activity_bioskop.xml
+++ b/app/src/main/res/layout/activity_bioskop.xml
@@ -2,14 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".BioskopActivity"
+    android:background="@color/black">
 
     <ScrollView
-        android:id="@+id/scrollView2"
-        android:background="@color/white"
+        android:id="@+id/bioskp_scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="72dp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -17,105 +20,96 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/headerCard"
+            <!-- Header -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@android:color/transparent"
+                android:padding="18dp"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+                    android:id="@+id/bioskop_textHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Welcome to Bioskop"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+                </TextView>
+
+                <ImageView
+                    android:id="@+id/bioskop_profile"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:src="@drawable/ic_profile"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toEndOf="@+id/bioskop_textHeader"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <!-- Spinner kota -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/grey"
+                app:cardCornerRadius="10dp"
                 app:cardElevation="0dp"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="20dp">
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/third"
-                    android:paddingBottom="20dp">
+                    android:paddingHorizontal="18dp"
+                    android:paddingVertical="8dp"
+                    android:layout_gravity="center_vertical">
 
                     <ImageView
-                        android:id="@+id/ivLogo"
-                        android:layout_width="120dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginTop="40dp"
-                        android:clickable="true"
-                        android:contentDescription="Home"
-                        android:focusable="true"
-                        android:onClick="onClick"
-                        android:src="@drawable/logo"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/ivProfile"
+                        android:id="@+id/bioskop_location"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginTop="40dp"
-                        android:layout_marginEnd="30dp"
+                        android:layout_gravity="center_vertical"
                         android:clickable="true"
-                        android:contentDescription="Profile"
                         android:focusable="true"
-                        android:onClick="onClick"
-                        android:src="@drawable/ic_profile"
+                        android:src="@drawable/ic_location1"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toEndOf="@+id/ivLogo"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
 
+                    <Spinner
+                        android:id="@+id/spinnerCity"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="50dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/bioskop_location">
+
+                    </Spinner>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/tvUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="username"
-                android:textColor="@color/black"
-                android:textSize="23sp"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp" />
 
-            <TextView
-                android:id="@+id/tvFilm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Film"
-                android:textColor="@color/black"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp" />
-
+            <!-- RecyclerView -->
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvFilm"
-                android:paddingBottom="20dp"
+                android:id="@+id/recyclerViewBioskop"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="20dp"/>
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:clipToPadding="false"
+                android:backgroundTint="@color/white"/>
 
-            <TextView
-                android:id="@+id/tvFavorite"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Favorite"
-                android:textColor="@color/black"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvFavorite"
-                android:paddingBottom="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="60dp"/>
         </LinearLayout>
     </ScrollView>
 
@@ -126,11 +120,11 @@
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:padding="8dp"
+        android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <!-- Gambar 1 -->
         <ImageView
             android:id="@+id/home"
             android:layout_width="100dp"
@@ -141,17 +135,18 @@
             android:focusable="true"
             android:onClick="onClick"
             android:src="@drawable/ic_home"
+            app:tint="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bioskop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Gambar 2 -->
         <ImageView
             android:id="@+id/bioskop"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginBottom="10dp"
+            app:tint="@color/black"
             android:clickable="true"
             android:contentDescription="Bioskop"
             android:focusable="true"
@@ -162,7 +157,6 @@
             app:layout_constraintStart_toEndOf="@+id/home"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Gambar 3 -->
         <ImageView
             android:id="@+id/profile"
             android:layout_width="100dp"
