--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -65,8 +65,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Edit Nama -->
-        <EditText
+        <TextView
             android:id="@+id/editNamaLengkap"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,7 +79,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Add Email TextView if necessary -->
         <TextView
             android:id="@+id/labelEmal"
             android:layout_width="0dp"
@@ -95,7 +93,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <EditText
+        <TextView
             android:id="@+id/editEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
