--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -55,7 +55,7 @@
             android:id="@+id/labelNamaLengkap"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Nama Lengkap"
+            android:text="Username"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="18sp"
@@ -66,14 +66,14 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/editNamaLengkap"
+            android:id="@+id/username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginHorizontal="20dp"
             android:background="@color/white"
             android:padding="12dp"
-            android:text="Aulia Permata"
+            android:text=""
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/labelNamaLengkap"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,12 +89,12 @@
             android:textSize="18sp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/editNamaLengkap"
+            app:layout_constraintTop_toBottomOf="@id/username"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/editEmail"
+            android:id="@+id/email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -114,7 +114,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="28dp"
             android:background="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/editEmail"
+            app:layout_constraintTop_toBottomOf="@id/email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
