--- a/app/src/main/res/layout/activity_bioskop.xml
+++ b/app/src/main/res/layout/activity_bioskop.xml
@@ -46,6 +46,7 @@
                     android:layout_height="30dp"
                     android:clickable="true"
                     android:focusable="true"
+                    android:onClick="onClick"
                     android:src="@drawable/ic_profile"
                     android:layout_marginTop="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
