--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -110,7 +110,7 @@
                 android:id="@+id/rvFavorite"
                 android:paddingBottom="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="720dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="60dp"/>
         </LinearLayout>
