--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="primary">#000000</color>
     <color name="secondary">#9C9C9C</color>
     <color name="third">#393939</color>
+    <color name="gold">#FFD700</color>
+    <color name="light_grey">#D3D3D3</color>
 </resources>
