update image from cloudinary

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -76,6 +76,25 @@
                 android:contentDescription="Movie poster"
                 app:srcCompat="@drawable/placeholder_movie" />
 
+            <Button
+                android:id="@+id/btnUploadImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upload New Image"
+                app:layout_constraintBottom_toBottomOf="@+id/imagePoster"
+                app:layout_constraintEnd_toEndOf="@+id/imagePoster"
+                app:layout_constraintStart_toStartOf="@+id/imagePoster" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/btnUploadImage"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
             <!-- Info singkat -->
             <TextView
                 android:id="@+id/textInfo"
