--- a/app/src/main/res/layout/activity_bioskop_form.xml
+++ b/app/src/main/res/layout/activity_bioskop_form.xml
@@ -54,13 +54,13 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                app:boxStrokeColor="@color/white">
 
                 <ImageView
                     android:id="@+id/imgCinema"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/grey"
                     android:padding="150dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_add_photo" />
