--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -281,8 +281,7 @@
             android:contentDescription="Home"
             android:focusable="true"
             android:onClick="onClick"
-            android:src="@drawable/ic_home"
-            app:tint="@color/grey"
+            android:src="@drawable/ic_home_nactive"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bioskop"
             app:layout_constraintStart_toStartOf="parent"
