functionality film page done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="third">#393939</color>
     <color name="gold">#FFD700</color>
     <color name="light_grey">#D3D3D3</color>
+    <color name="red">#FF0000</color>
 </resources>
