--- a/app/src/main/res/layout/item_films.xml
+++ b/app/src/main/res/layout/item_films.xml
@@ -34,7 +34,7 @@
             android:layout_margin="8dp"
             android:layout_marginStart="13dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="13dp"
+            android:layout_marginEnd="10dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/black"
@@ -44,6 +44,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/filmImage" />
 
+        <!-- Cinema info -->
         <TextView
             android:id="@+id/filmBioskop"
             android:layout_width="0dp"
@@ -51,12 +52,10 @@
             android:layout_marginStart="13dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="13dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/grey"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/filmHarga"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/filmTitle" />
@@ -73,6 +72,36 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/filmTitle" />
+
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="15dp"
+            android:text="Edit"
+            android:backgroundTint="@color/primary"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/filmBioskop" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="@color/red"
+            android:text="Delete"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/filmBioskop" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
