add login register profile functionality with username

--- a/app/src/main/res/layout/activity_film_form.xml
+++ b/app/src/main/res/layout/activity_film_form.xml
@@ -304,13 +304,15 @@
                     android:text="Save"
                     android:textColor="@color/white" />
 
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:visibility="gone" />
             </LinearLayout>
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
