--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,8 +69,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="2dp"
-                    android:layout_marginBottom="15dp"
-                    tools:text="Welcome," />
+                    android:layout_marginBottom="15dp" />
 
                 <TextView
                     android:id="@+id/tvUsername"
@@ -81,8 +80,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="15dp"
-                    tools:text="user" />
+                    android:layout_marginBottom="15dp" />
 
             </LinearLayout>
 
