--- a/app/src/main/res/layout/activity_film_form.xml
+++ b/app/src/main/res/layout/activity_film_form.xml
@@ -148,17 +148,19 @@
 
             <FrameLayout
                 android:id="@+id/flFilmImage"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_width="220dp"
+                android:layout_height="320dp"
                 android:layout_marginStart="20dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp">
 
                 <ImageView
                     android:id="@+id/ivFilm"
-                    android:layout_width="350dp"
-                    android:layout_height="250dp"
+                    android:layout_width="220dp"
+                    android:layout_height="320dp"
+                    android:layout_gravity="center"
                     android:contentDescription="Klik untuk menambahkan gambar film"
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_addpict"
