change linear layout in activity_starred_cinema.xml

--- a/app/src/main/res/layout/activity_starred_cinema.xml
+++ b/app/src/main/res/layout/activity_starred_cinema.xml
@@ -6,7 +6,7 @@
     android:background="@color/black">
 
     <LinearLayout
-        android:id="@+id/headerBar"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary"
